vmclarity: Cost estimation infra + aws (vmclarity#603)
* apiserver

* orchestrator

* aws cost estimation

* review

* fix linters and tests

* Fix error wrapping and revert null errors change

---------
